@@ -440,6 +440,14 @@ int main(int argc, char *argv[])
 	// defaults of main
 	Config config;
 
+	// deconstruct benchmarking (= output results) at scope exit 
+	int dummy; // this is needed, as SCOPE_EXIT is not defined for no arguments
+	BOOST_SCOPE_EXIT( (dummy) ) {
+  	(void)dummy;
+		benchmark::BenchmarkController::finish();
+	}
+	BOOST_SCOPE_EXIT_END
+
 	// if we throw UsageError inside this, error and usage will be displayed, otherwise only error
 	try
 	{
@@ -485,13 +493,7 @@ int main(int argc, char *argv[])
 		}
 		else
 			ctr.setOutput(0);
-		// deconstruct benchmarking (= output results) at scope exit 
-		int dummy; // this is needed, as SCOPE_EXIT is not defined for no arguments
-		BOOST_SCOPE_EXIT( (dummy) ) {
-	  	(void)dummy;
-			benchmark::BenchmarkController::finish();
-		}
-		BOOST_SCOPE_EXIT_END
+
 		// also deconstruct & output at SIGTERM/SIGINT
 		{
 			if( SIG_ERR == signal(SIGTERM, signal_handler) )
@@ -641,6 +643,7 @@ int main(int argc, char *argv[])
 	}
   catch(const GeneralError &ge)
 	{
+pctx.modelBuilder.reset();
 		std::cerr << "GeneralError: " << ge.getErrorMsg() << std::endl << std::endl;
 		return 1;
 	}
@@ -736,7 +739,7 @@ void processOptionsPrePlugin(
   pctx.unfoundedSetCheckHeuristicsFactory.reset(new UnfoundedSetCheckHeuristicsPostFactory());
 
   bool specifiedModelQueueSize = false;
-  while ((ch = getopt_long(argc, argv, shortopts, longopts, NULL)) != -1)
+ while ((ch = getopt_long(argc, argv, shortopts, longopts, NULL)) != -1)
 	{
 		switch (ch)
 		{
@@ -797,6 +800,7 @@ void processOptionsPrePlugin(
 		case 'e':
 			// heuristics={old,trivial,easy,manual:>filename>}
 			{
+				heuristicChosen = true;
 				std::string heuri(optarg);
 				if( heuri == "old" )
 				{
@@ -1332,6 +1336,13 @@ void processOptionsPrePlugin(
 	}
 
 	// global constraints
+	if (pctx.config.getOption("Repair")){
+		// repair answer set computation needs monolithic heuristic and liberal safety
+		if (heuristicChosen) throw GeneralError("Option --repair is incompatible with --repair. Repair answer set builder chooses the heuristic automatically.");
+		pctx.evalHeuristic.reset(new EvalHeuristicMonolithic);
+		pctx.config.setOption("IncludeAuxInputInAuxiliaries", 1);
+		pctx.config.setOption("LiberalSafety", 1);
+	}
 	if (pctx.config.getOption("UFSCheck") && !pctx.config.getOption("GenuineSolver")){
 		LOG(WARNING, "Unfounded Set Check is only supported for genuine solvers; will behave like flpcheck=none");
 	}
